--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: tbart
 Type: Package
-Title: Teitz and Bart p-median algorithm
-Version: 0.9.1
-Date: 2014-08-15
+Title: Teitz and Bart's p-Median Algorithm
+Version: 1.0
+Date: 2015-01-11
 Author: Chris Brunsdon
 Maintainer: Chris Brunsdon <christopher.brunsdon@nuim.ie>
 Description: Solves Teitz and Bart's p-median problem - given a set of
@@ -12,10 +12,9 @@ Description: Solves Teitz and Bart's p-median problem - given a set of
     optimal subset is found.
 License: GPL (>= 2)
 Depends: Rcpp (>= 0.10.3), sp
-Suggests: GISTools, RColorBrewer
+Suggests: GISTools, RColorBrewer, rgeos
 LinkingTo: Rcpp
-Collate: 'RcppExports.R' 'tbmain.R' 'tbart-describes.R'
-Packaged: 2014-08-16 14:50:52 UTC; chrisbrunsdon
+Packaged: 2015-02-13 17:27:36 UTC; chrisbrunsdon
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-08-16 17:31:10
+Date/Publication: 2015-02-13 20:23:02
